# bunledge

./: .gitignore  README.md  docker-compose.yml  pyrightconfig.json  timeback.config.json
backend/: .env.example  pyproject.toml  timeback.config.json
backend/scripts/: init_db.py
backend/src/app/: auth.py  config.py  db.py  dependencies.py  main.py  timeback.py
backend/src/app/models/: __init__.py  activity.py  assessment.py  exercise.py  user.py
backend/src/app/routes/: __init__.py  activities.py  assessments.py  exercises.py  users.py
frontend/: .env.example  .prettierrc.js  index.html  oxlint.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx
frontend/src/components/: ActivityForm.tsx  ActivityGate.tsx  AuthenticatedHeader.tsx  AuthenticatedView.tsx  EndActivityModal.tsx  HomeView.tsx  LoginHeader.tsx  ProfileModal.tsx  QuestionAnswerer.tsx  SimpleModal.tsx  TimebackGate.tsx  TimebackLogo.tsx  UnauthenticatedView.tsx
frontend/src/components/ui/: Spinner.tsx
frontend/src/hooks/: useActivityResume.ts  useCurrentUser.ts  useTimebackLaunchFlag.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: TimebackSignIn.tsx
frontend/src/providers/: TimebackWithAuth0.tsx
scripts/: db-query.sh  db-shell.sh  dev.sh  reset-db.sh
